Bugfixed areabloc toolbar overflow

--- a/static/css/pages/editmode.css
+++ b/static/css/pages/editmode.css
@@ -363,23 +363,24 @@
 /* Palette flotante */
 #activeWireframe .x-window.pimcore_areablock_toolbar {
     background: none repeat scroll 0 0 #222;
-    -webkit-transition: all 200ms;
-    -moz-transition: all 200ms;
-    -ms-transition: all 200ms;
-    -o-transition: all 200ms;
-    transition: all 200ms;
-    overflow: hidden;
-    height: 100% !important;
-    max-height: 100%;
-    top: 40px !important;
+    overflow: hidden !important;
     left: 3px !important;
-    z-index: 10001;
+    top: 41px !important;
+    width: 214px !important;
+    right: auto !important;
+    z-index: 1001 !important;
+    height: 100% !important;
+    max-height: 100% !important;
 }
 #activeWireframe .x-window.pimcore_areablock_toolbar .x-btn {
     display: block !important;
 }
 #activeWireframe .x-window.pimcore_areablock_toolbar > .x-window-body {
-    overflow-y: auto;
+    width: 210px !important;
+    height: calc(100% - 85px) !important;
+    left: 0;
+    top: 42px;
+    overflow-y: auto !important;
 }
 #activeWireframe .x-window.pimcore_areablock_toolbar > div {
     background: none repeat scroll 0 0 #222;
